--- a/plugins/chunter-assets/lang/en.json
+++ b/plugins/chunter-assets/lang/en.json
@@ -130,6 +130,10 @@
     "StartConversation": "Start conversation",
     "ViewingThreadFromArchivedChannel": "You are viewing a thread from an archived channel",
     "ViewingArchivedChannel": "You are viewing an archived channel",
-    "OpenChatInSidebar": "Open chat in sidebar"
+    "OpenChatInSidebar": "Open chat in sidebar",
+    "CreateGroup": "Create Group",
+    "GroupName": "Group Name",
+    "GroupNamePlaceholder": "Enter group name",
+    "Create": "Create"
   }
 }
